Distance-slice analysis

--- a/notebooks/WallAnalysis.ipynb
+++ b/notebooks/WallAnalysis.ipynb
@@ -714,17 +714,62 @@
    "outputs": [],
    "source": [
     "df_source = df_chosen.loc[df_chosen.source==\"None\"]\n",
-    "\n",
-    "fig, axs = plt.subplots(1, 2, squeeze=False)\n",
-    "fig.set_size_inches(15, 5)\n",
-    "fig.suptitle(chosen_source)\n",
-    "for j, (mic_type, df_mic) in enumerate(df_source.groupby(\"mic_type\")):\n",
-    "    row = df_mic.iloc[0]\n",
-    "    print(row.frequencies.shape)\n",
-    "    print(row.spec.shape)\n",
-    "    print(row.seconds.shape)\n",
-    "    axs[0, j].pcolormesh(row.seconds, row.frequencies, np.log(row.spec.T))\n",
-    "    axs[0, j].set_title(f'{mic_type}')"
+    "df_mic = df_source.loc[df_source.mic_type == \"audio_deck\"]\n",
+    "assert len(df_mic) == 1\n",
+    "row = df_mic.iloc[0]\n",
+    "f_matrix = row.frequencies_matrix\n",
+    "print(f_matrix.shape)\n",
+    "fig, ax = plt.subplots()\n",
+    "fig.set_size_inches(10, 5)\n",
+    "for i, row in enumerate(f_matrix):\n",
+    "    plt.scatter([i]*len(row), row, color='C0', s=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#levels = list(range(2))\n",
+    "levels = list(range(5))\n",
+    "num_levels = len(levels)\n",
+    "#times = range(f_matrix.shape[0]) # range(100, 300)\n",
+    "times = range(10, 800)\n",
+    "f_matrix_reduced = f_matrix[times, :]\n",
+    "f_matrix_reduced = f_matrix_reduced[:, levels]\n",
+    "fig, axs = plt.subplots(num_levels, sharey=False, sharex=True, squeeze=False)\n",
+    "fig.set_size_inches(10, 10)\n",
+    "for j, level in enumerate(levels):\n",
+    "    axs[j, 0].plot(times, f_matrix_reduced[:, j], color=f\"C{j}\", marker='o')\n",
+    "    freq = np.median(f_matrix_reduced[:, j])\n",
+    "    axs[j, 0].set_title(f'level {level}: {freq}Hz')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "all_freqs = np.sort(f_matrix[times,:10].flatten())\n",
+    "count, bins = np.histogram(all_freqs, bins=np.unique(all_freqs))\n",
+    "plt.plot(bins[:-1], count)\n",
+    "plt.title('histogram strongest 10 frequency bins')\n",
+    "print(bins[np.argsort(count)[::-1]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "all_freqs = np.sort(f_matrix[times,0].flatten())\n",
+    "count, bins = np.histogram(all_freqs, bins=np.unique(all_freqs))\n",
+    "plt.plot(bins[:-1], count)\n",
+    "plt.title('histogram strongest frequency bin')\n",
+    "print(bins[np.argsort(count)[::-1]])"
    ]
   },
   {
@@ -744,66 +789,77 @@
    "source": [
     "#mic_indices = range(4)\n",
     "from constants import SPEED_OF_SOUND\n",
-    "CHOSEN_MICS = [3]\n",
+    "CHOSEN_MICS = [0, 1, 2, 3] #[3]\n",
     "CUT_LAST = 3\n",
     "CUT_FIRST = 3\n",
     "X_LIM = 20\n",
+    "#CHOSEN_PROP_FREQ = 781 #\n",
+    "CHOSEN_PROP_FREQ = 671 #\n",
+    "#CHOSEN_PROP_FREQ = 734 #\n",
+    "#CHOSEN_PROP_FREQ = 2187 #1\n",
     "\n",
     "for chosen_source, df_source in df_chosen.groupby('source'):\n",
-    "    if chosen_source == \"None\": \n",
-    "        continue\n",
     "    for mic_type, df_this in df_source.groupby('mic_type'):\n",
     "            \n",
     "        if mic_type == 'audio_deck':\n",
     "            mic_indices = CHOSEN_MICS\n",
-    "            color = 'C0'\n",
     "        else:\n",
     "            mic_indices = [0]\n",
-    "            color = 'C1'\n",
     "            \n",
     "        fig, axs = plt.subplots(2, 2, squeeze=False)\n",
     "        fig.set_size_inches(15, 5)\n",
     "        fig.suptitle(chosen_source)\n",
     "\n",
-    "        for j, (motors, df_motors) in enumerate(df_this.groupby('motors')):\n",
-    "            assert len(df_motors) <= 1, f\"{len(df_motors)} findings for {motors, chosen_source}\"\n",
+    "        for j, motors in enumerate([0, 'all43000']):\n",
+    "            \n",
+    "            df_motors = df_this.loc[df_this.motors==motors]\n",
+    "            \n",
+    "            if len(df_motors) != 1: \n",
+    "                print(f\"{len(df_motors)} findings for {motors, chosen_source}\")\n",
+    "                continue\n",
     "\n",
     "            row = df_motors.iloc[0]\n",
-    "            frequencies = row.frequencies\n",
     "\n",
     "            signals_f = row.signals_f\n",
     "            if motors != 'all43000':\n",
     "                signals_f = signals_f[::-1, :, :]\n",
     "\n",
-    "            if not chosen_source in ('None', None):\n",
+    "            if (chosen_source == \"None\") and (mic_type == \"audio_deck\"):\n",
+    "                freq = CHOSEN_PROP_FREQ\n",
+    "                bin_ = np.argmin(np.abs(row.frequencies_matrix - freq), axis=1)\n",
+    "            elif chosen_source != \"None\":\n",
     "                freq = int(chosen_source.strip('mono'))\n",
-    "                bin_ = np.argmin(abs(frequencies - freq))\n",
-    "                error = abs(frequencies[bin_] - freq)\n",
+    "                bin_ = np.argmin(abs(row.frequencies - freq))\n",
+    "                error = abs(row.frequencies[bin_] - freq)\n",
     "                if error > 10:\n",
-    "                    print(f'Warning: big diff between {freq} and {frequencies[bin_]}')\n",
-    "            else: \n",
-    "                bin_ = np.argmax(np.sum(np.abs(signals_f), axis=(0, 1))) \n",
-    "                print('max frequency without source:', frequencies[bin_])\n",
+    "                    print(f'Warning: big diff between {freq} and {row.frequencies[bin_]}')\n",
+    "            else:\n",
+    "                freq = CHOSEN_PROP_FREQ\n",
+    "                bin_ = np.argmin(abs(row.frequencies - freq))\n",
+    "                error = abs(row.frequencies[bin_] - freq)\n",
+    "                if error > 10:\n",
+    "                    print(f'Warning: big diff between {freq} and {row.frequencies[bin_]}')\n",
     "\n",
     "            seconds = row.seconds[CUT_FIRST:-CUT_LAST]\n",
     "            distances = seconds * 50 / 165.0\n",
     "            mean_d = np.median(distances[5:]-distances[4:-1])\n",
-    "            expected_period = SPEED_OF_SOUND / frequencies[bin_] * 100 / 2 #\n",
+    "            expected_period = SPEED_OF_SOUND / freq * 100 / 2 #\n",
     "\n",
     "            for mic_idx in mic_indices:\n",
-    "                spec = np.abs(signals_f[:, mic_idx, bin_])[CUT_FIRST:-CUT_LAST] # times x frequencies\n",
-    "                axs[0, j].plot(distances, spec, label=f'mic{mic_idx}', color=color)\n",
+    "                spec = np.abs(signals_f[range(signals_f.shape[0]), mic_idx, bin_])[CUT_FIRST:-CUT_LAST] # times x frequencies\n",
+    "                axs[0, j].plot(distances, spec, label=f'mic{mic_idx}', color=f'C{mic_idx}')\n",
     "                axs[0, j].set_title(f'motors {motors}')\n",
     "                \n",
     "                spec_fft = np.fft.rfft(spec)[1:]\n",
     "                freqs = np.fft.rfftfreq(len(spec), mean_d)[1:]\n",
     "                period = 1/freqs\n",
-    "                axs[1, j].semilogx(period, np.abs(spec_fft))\n",
-    "                axs[1, j].axvline(expected_period) # cm\n",
+    "                axs[1, j].semilogx(period, np.abs(spec_fft), color=f'C{mic_idx}')\n",
+    "                axs[1, j].axvline(expected_period, color=f'C{mic_idx}', ls=\":\") # cm\n",
     "\n",
     "            axs[0, j].legend(loc='upper right')\n",
     "            axs[0, j].set_xlim(0,50)\n",
-    "            axs[0, j].set_ylim(min(spec), max(spec))"
+    "            axs[1, j].set_xlim(1e-1,50)\n",
+    "            #axs[0, j].set_ylim(min(spec), max(spec))"
    ]
   },
   {
