Do parsing of new experiments

--- a/notebooks/WallAnalysis.ipynb
+++ b/notebooks/WallAnalysis.ipynb
@@ -169,7 +169,7 @@
     "spec = get_spectrogram(df)\n",
     "stft = np.array([*df.loc[:, \"signals_f\"]]).transpose(2, 1, 0)\n",
     "times = df.timestamp.values / 1000\n",
-    "fig, axs = plt.subplots(stft.shape[1], sharex=True)\n",
+    "fig, axs = plt.subplots(stft.shape[1], sharex=True, sharey=True)\n",
     "fig.set_size_inches(15, 10)\n",
     "frequencies = df.iloc[0].frequencies\n",
     "for i, ax in enumerate(axs):\n",
@@ -261,6 +261,20 @@
     "              np.log10(spec_chirp[frequencies_chirp < max_freq_plot, :]))\n",
     "ax.set_xlim(times_chirp[0], times_chirp[-1])\n",
     "ax.set_ylim(0, max_freq_plot)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig = plt.figure()\n",
+    "fig.set_size_inches(10, 10)\n",
+    "plt.title('psd of buzzer frequency sweep')\n",
+    "plt.semilogy(frequencies_chirp[1:], psd[0, 1:], color='C0', label='buzzer')\n",
+    "plt.xlim(frequencies_chirp[1], 16000)\n",
+    "plt.grid(which='both')"
    ]
   },
   {
@@ -471,91 +485,20 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
-    "import itertools\n",
-    "from evaluate_data import read_df, read_df_from_wav, get_fname\n",
-    "from wall_analysis import get_psd\n",
-    "\n",
-    "exp_name = '2020_12_7_moving'; appendix_list = [\"\", \"_new\"]; snr_list = [0, 1]\n",
-    "max_value = 100 # all signals received are actually between 0 and 2. \n",
+    "#exp_name = '2020_12_7_moving'; \n",
+    "exp_name = '2020_12_9_rotating'; \n",
     "fname = f'results/{exp_name}_real.pkl'\n",
     "\n",
-    "sys.path = [p for p in sys.path if not 'experiments' in p]\n",
-    "sys.path.insert(0, f'../experiments/{exp_name}')\n",
-    "from params import SOURCE_LIST, DISTANCE_LIST, DEGREE_LIST, MOTORS_LIST\n",
-    "N_BUFFER = 2048\n",
-    "\n",
     "try:\n",
-    "    raise\n",
     "    df_total = pd.read_pickle(fname)\n",
-    "    frequencies = df_total.iloc[0].frequencies\n",
     "    print('read', fname)\n",
     "except:\n",
-    "    print('could not read', fname)\n",
-    "    df_total = pd.DataFrame(columns=['signals_f', 'degree', 'distance', 'source', 'snr', \n",
-    "                                     'motors', 'psd', 'spec', 'frequencies', 'appendix', 'seconds', 'mic_type', 'frequencies_matrix'])\n",
-    "\n",
-    "    params = dict(\n",
-    "        props = False,\n",
-    "        exp_name = exp_name\n",
-    "    )\n",
-    "    for degree, distance, source, motors, appendix, snr in itertools.product(DEGREE_LIST, \n",
-    "                                                                        DISTANCE_LIST, \n",
-    "                                                                        SOURCE_LIST, \n",
-    "                                                                        MOTORS_LIST, \n",
-    "                                                                        appendix_list, \n",
-    "                                                                        snr_list): \n",
-    "        try:\n",
-    "            params['motors'] = motors\n",
-    "            params['degree'] = degree\n",
-    "            params['distance'] = distance\n",
-    "            params['source'] = source\n",
-    "            params['appendix'] = appendix\n",
-    "            params['snr'] = snr\n",
-    "            df_csv, __ = read_df(**params)\n",
-    "            \n",
-    "            fname = get_fname(**params)\n",
-    "            df_wav = read_df_from_wav(f'../experiments/{exp_name}/export/{fname}.wav', n_buffer=N_BUFFER)\n",
-    "            \n",
-    "        except FileNotFoundError as e:\n",
-    "            continue \n",
-    "            \n",
-    "        for mic_type, df in zip(['audio_deck', 'measurement'], [df_csv, df_wav]):\n",
-    "            \n",
-    "            signals_f = np.array([*df.signals_f.values]) # n_times x n_mics x n_freqs\n",
-    "            if np.any(np.abs(signals_f) > max_value):\n",
-    "                signals_f[np.where(np.abs(signals_f) > max_value)] = 0\n",
-    "\n",
-    "            seconds = (df.timestamp.values - df.iloc[0].timestamp) / 1000\n",
-    "            frequencies_matrix = np.array([*df.loc[:,'frequencies']])\n",
-    "            frequencies = frequencies_matrix[0, :]\n",
-    "            # save frequency matrix only if frequencies vary.\n",
-    "            if not np.any(np.any(frequencies_matrix - frequencies[None, :], axis=0)):\n",
-    "                frequencies_matrix = None\n",
-    "            else:\n",
-    "                print('saving frequencies matrix')\n",
-    "            \n",
-    "            spec = np.sum(np.abs(signals_f), axis=1)\n",
-    "            psd = get_psd(signals_f, frequencies, fname='real')\n",
-    "\n",
-    "            params['source'] = str(params['source'])\n",
-    "            all_items = dict(\n",
-    "                mic_type=mic_type,\n",
-    "                signals_f=signals_f,\n",
-    "                frequencies=frequencies,\n",
-    "                frequencies_matrix=frequencies_matrix,\n",
-    "                spec=spec,\n",
-    "                psd=psd,\n",
-    "                seconds=seconds\n",
-    "            )\n",
-    "            all_items.update(params)\n",
-    "            df_total.loc[len(df_total), :] = all_items\n",
-    "\n",
-    "    fname = f'results/{exp_name}_real.pkl'\n",
-    "    pd.to_pickle(df_total, fname)\n",
-    "    print('saved as', fname)"
+    "    print('run wall_analysis.py to parse experiments.')"
    ]
   },
   {
@@ -594,7 +537,7 @@
    "source": [
     "for i, row in df_total.iterrows():\n",
     "    plt.plot(row.seconds, row.seconds + i * 10, label=f'row {i}')\n",
-    "plt.legend(bbox_to_anchor=(1.0, 0), loc='lower left')"
+    "#plt.legend(bbox_to_anchor=(1.0, 0), loc='lower left')"
    ]
   },
   {
@@ -607,13 +550,14 @@
    "source": [
     "df_meas = df_total.loc[df_total.mic_type == 'audio_deck', :]\n",
     "for chosen_source, df_this in df_meas.groupby('source'):\n",
-    "    for app, df_app in df_this.groupby('appendix'):\n",
+    "    for tuple_params, df_app in df_this.groupby(['appendix', 'snr', 'distance', 'degree']):\n",
+    "        \n",
     "        fig, axs = plt.subplots(1, 2)\n",
     "        fig.set_size_inches(15, 5)\n",
-    "        fig.suptitle(chosen_source + app)\n",
+    "        fig.suptitle(f'{chosen_source}, {str(tuple_params)}')\n",
     "\n",
     "        for j, (motors, df_motors) in enumerate(df_app.groupby('motors')):\n",
-    "            assert len(df_motors) <= 1, f\"{len(df_motors)} findings for {app, motors, chosen_source}\"\n",
+    "            assert len(df_motors) <= 1, f\"{len(df_motors)} findings for {tuple_params, motors, chosen_source}: {df_motors}\"\n",
     "            \n",
     "            row = df_motors.iloc[0]\n",
     "            frequencies = row.frequencies\n",
@@ -623,9 +567,12 @@
     "                signals_f = signals_f[::-1, :, :]\n",
     "            \n",
     "            if not chosen_source in ('None', None):\n",
-    "                freq = int(chosen_source.strip('mono'))\n",
-    "                bin_ = np.argmin(abs(frequencies - freq))\n",
-    "                assert int(frequencies[bin_]) == freq\n",
+    "                try:\n",
+    "                    freq = int(chosen_source.strip('mono'))\n",
+    "                    bin_ = np.argmin(abs(frequencies - freq))\n",
+    "                    assert int(frequencies[bin_]) == freq\n",
+    "                except: \n",
+    "                    bin_ = 15\n",
     "            else: \n",
     "                bin_ = np.argmax(np.sum(np.abs(signals_f), axis=(0, 1))) \n",
     "                print('max frequency without source:', frequencies[bin_])\n",
@@ -657,19 +604,31 @@
     "        mask = np.bitwise_or(mask, this_mask)\n",
     "    return df_total.loc[mask, :]\n",
     "    \n",
-    "motors = \"all43000\"\n",
-    "chosen_dicts = [\n",
-    "    {\"source\": \"mono3125\", \"motors\": 0, \"appendix\":\"\"},\n",
-    "    {\"source\": \"mono3125\", \"motors\": motors, \"appendix\":\"_new\"},\n",
-    "    {\"source\": \"mono4156\", \"motors\": 0, \"appendix\":\"\"},\n",
-    "    {\"source\": \"mono4156\", \"motors\": motors, \"appendix\":\"_new\"},\n",
-    "    {\"source\": \"mono8000\", \"motors\": 0, \"appendix\":\"_new\"},\n",
-    "    {\"source\": \"mono8000\", \"motors\": motors, \"appendix\":\"\"},\n",
-    "    {\"source\": \"None\", \"motors\": motors, \"appendix\":\"_new\"},\n",
-    "]\n",
+    "if exp_name == \"2020_12_7_moving\":\n",
+    "    motors = \"all43000\"\n",
+    "    chosen_dicts = [\n",
+    "        {\"source\": \"mono3125\", \"motors\": 0, \"appendix\":\"\"},\n",
+    "        {\"source\": \"mono3125\", \"motors\": motors, \"appendix\":\"_new\"},\n",
+    "        {\"source\": \"mono4156\", \"motors\": 0, \"appendix\":\"\"},\n",
+    "        {\"source\": \"mono4156\", \"motors\": motors, \"appendix\":\"_new\"},\n",
+    "        {\"source\": \"mono8000\", \"motors\": 0, \"appendix\":\"_new\"},\n",
+    "        {\"source\": \"mono8000\", \"motors\": motors, \"appendix\":\"\"},\n",
+    "        {\"source\": \"None\", \"motors\": motors, \"appendix\":\"_new\"},\n",
+    "    ]\n",
+    "elif exp_name == \"2020_12_9_rotating\":\n",
+    "    source = \"sweep\"\n",
+    "    chosen_dicts = []\n",
+    "    for d in df_total.distance.unique():\n",
+    "        appendix = \"_new\" if d in [20, 30] else \"\" \n",
+    "        for m in [0, \"all43000\"]:\n",
+    "            chosen_dicts += [\n",
+    "                {\"motors\": motors, \"appendix\":appendix, \"snr\":0, \"distance\":d}\n",
+    "            ]\n",
     "    \n",
+    "print(chosen_dicts)\n",
     "df_chosen = filter_by_dicts(df_total, chosen_dicts)\n",
-    "assert len(df_chosen) == 2*len(chosen_dicts) # times 2 because of mic_type"
+    "#assert len(df_chosen) == 2*len(chosen_dicts) # times 2 because of mic_type\n",
+    "print(df_chosen.loc[:, [\"appendix\", \"snr\", \"distance\", \"degree\", \"motors\"]])"
    ]
   },
   {
@@ -688,16 +647,28 @@
     "mic_type = 'measurement'\n",
     "for chosen_source, df_source in df_chosen[df_chosen.mic_type==mic_type].groupby('source'):\n",
     "    \n",
-    "    fig, axs = plt.subplots(1, 2, squeeze=False)\n",
+    "    fig, axs = plt.subplots(1, 3, squeeze=False)\n",
     "    fig.set_size_inches(15, 5)\n",
     "    fig.suptitle(chosen_source)\n",
     "    \n",
-    "    for j, (motors, df_this) in enumerate(df_source.groupby('motors')):\n",
-    "        \n",
-    "        assert len(df_this) == 1\n",
+    "    for j, motors in enumerate([0, \"all43000\"]):\n",
+    "        df_this = df_source[df_source.motors==motors]\n",
+    "        if len(df_this) != 1:\n",
+    "            continue\n",
+    "            \n",
     "        row = df_this.iloc[0]\n",
     "        axs[0, j].pcolorfast(row.seconds, row.frequencies, np.log(row.spec.T))\n",
-    "        axs[0, j].set_title(f'motors {motors}')"
+    "        axs[0, j].set_title(f'motors {motors}')\n",
+    "        \n",
+    "    cut_x = 500\n",
+    "    cut_y = range(100, 400)\n",
+    "    \n",
+    "    axs[0, 1].plot([row.seconds[0], row.seconds[cut_x]], [row.frequencies[cut_y[0]], row.frequencies[cut_y[0]]], color='red', linewidth=1)\n",
+    "    axs[0, 1].plot([row.seconds[0], row.seconds[0]], [row.frequencies[cut_y[0]], row.frequencies[cut_y[-1]]], color='red', linewidth=1)\n",
+    "    axs[0, 1].plot([row.seconds[cut_x], row.seconds[cut_x]], [row.frequencies[cut_y[0]], row.frequencies[cut_y[-1]]], color='red', linewidth=1)\n",
+    "    axs[0, 1].plot([row.seconds[0], row.seconds[cut_x]], [row.frequencies[cut_y[-1]], row.frequencies[cut_y[-1]]], color='red', linewidth=1)\n",
+    "    axs[0, 2].pcolorfast(row.seconds[:cut_x], row.frequencies[cut_y], np.log(row.spec.T[cut_y, :cut_x]))\n",
+    "    fig.savefig(f'/home/duembgen/Desktop/spec-{chosen_source}.png', bbox_inches='tight')"
    ]
   },
   {
@@ -794,9 +765,10 @@
     "CUT_FIRST = 3\n",
     "X_LIM = 20\n",
     "#CHOSEN_PROP_FREQ = 781 #\n",
-    "CHOSEN_PROP_FREQ = 671 #\n",
+    "#CHOSEN_PROP_FREQ = 671 #\n",
     "#CHOSEN_PROP_FREQ = 734 #\n",
     "#CHOSEN_PROP_FREQ = 2187 #1\n",
+    "CHOSEN_PROP_FREQ = 1453 \n",
     "\n",
     "for chosen_source, df_source in df_chosen.groupby('source'):\n",
     "    for mic_type, df_this in df_source.groupby('mic_type'):\n",
@@ -843,6 +815,7 @@
     "            seconds = row.seconds[CUT_FIRST:-CUT_LAST]\n",
     "            distances = seconds * 50 / 165.0\n",
     "            mean_d = np.median(distances[5:]-distances[4:-1])\n",
+    "            print(mean_d)\n",
     "            expected_period = SPEED_OF_SOUND / freq * 100 / 2 #\n",
     "\n",
     "            for mic_idx in mic_indices:\n",
