--- a/notebooks/WallStudy.ipynb
+++ b/notebooks/WallStudy.ipynb
@@ -37,7 +37,6 @@
     "\n",
     "DURATION_SEC = 38\n",
     "N_TIMES = DURATION_SEC * FS // (N_BUFFER * 2)\n",
-    "print(N_TIMES)\n",
     "\n",
     "def generate_rir(distance_cm=0, yaw_deg=0, single_mic=False, ax=None):\n",
     "    # simplification1: attenuation normally depends on pressure, humidity, frequency.\n",
@@ -219,12 +218,14 @@
     "        axs[0].semilogy(distances, df_matrix[slice_f, :])\n",
     "        axs[0].set_title(f'frequency = {frequencies[slice_f]:.0f} Hz')\n",
     "        axs[0].set_xlabel('distance [cm]')\n",
-    "        axs[0].set_ylim(np.min(df_matrix), np.max(df_matrix))\n",
+    "        axs[0].set_ylim(1e-1, 10)\n",
+    "        #axs[0].set_ylim(np.min(df_matrix), np.max(df_matrix))\n",
     "\n",
     "        axs[1].semilogy(frequencies, df_matrix[:, slice_d])\n",
     "        axs[1].set_title(f'distance = {distances[slice_d]:.0f} cm')\n",
     "        axs[1].set_xlabel('frequency [Hz]')\n",
-    "        axs[1].set_ylim(np.min(df_matrix), np.max(df_matrix))\n",
+    "        axs[1].set_ylim(1e-1, 10)\n",
+    "        #axs[1].set_ylim(np.min(df_matrix), np.max(df_matrix))\n",
     "        plt.show()\n",
     "\n",
     "    interactive_plot = interact(update_figure, \n",
@@ -325,7 +326,6 @@
     "distances = np.linspace(0, 100, 500)\n",
     "frequencies = get_frequencies(FS)\n",
     "\n",
-    "\n",
     "df_matrix = np.empty((len(frequencies), len(distances)))\n",
     "\n",
     "for j, distance_cm in enumerate(distances):\n",
@@ -375,9 +375,57 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.figure()\n",
+    "fig = plt.figure()\n",
+    "fig.set_size_inches(10, 5)\n",
     "plt.pcolormesh(distances, frequencies_theo[freq_start:], np.log10(df_matrix_theo[freq_start:]))\n",
     "matrix_slices(df_matrix_theo[freq_start:], frequencies_theo[freq_start:], distances)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "frequencies_slices = [671, 3125, 4156, 8000]\n",
+    "max_distance = 50\n",
+    "fig, axs = plt.subplots(len(frequencies_slices), sharey=True, sharex=True)\n",
+    "fig.suptitle('distance slices')\n",
+    "fig.set_size_inches(10, 5)\n",
+    "for i, f in enumerate(frequencies_slices):\n",
+    "    idx = np.argmin(np.abs(frequencies-f))\n",
+    "    slice_ = df_matrix[idx, distances < max_distance]\n",
+    "    axs[i].plot(distances[distances < max_distance], slice_, label=f'{f}Hz')\n",
+    "    axs[i].set_xlabel('distance [cm]')\n",
+    "    axs[i].set_ylabel('response')\n",
+    "    axs[i].legend(loc='upper right')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "distance_slices = [5, 10, 20, 30, 40, 50]\n",
+    "max_frequency = 5000\n",
+    "min_frequency = 1000\n",
+    "freq_indices = np.where((frequencies < max_frequency) & (frequencies > min_frequency))[0]\n",
+    "sparse_indices = np.linspace(freq_indices[0], freq_indices[-1], 32).astype(int)\n",
+    "\n",
+    "fig, axs = plt.subplots(len(distance_slices), sharey=True, sharex=True)\n",
+    "fig.suptitle('frequency slices')\n",
+    "fig.set_size_inches(10, 10)\n",
+    "for i, d in enumerate(distance_slices):\n",
+    "    idx = np.argmin(np.abs(distances - d))\n",
+    "    slice_ = df_matrix[freq_indices, idx]\n",
+    "    axs[i].plot(frequencies[freq_indices], slice_, label=f'{d}cm')\n",
+    "    axs[i].set_xlabel('frequency [Hz]')\n",
+    "    axs[i].set_ylabel('response')\n",
+    "    axs[i].legend(loc='upper right')\n",
+    "    \n",
+    "    slice_ = df_matrix[sparse_indices, idx]\n",
+    "    axs[i].scatter(frequencies[sparse_indices], slice_, label=f'{d}cm', color='C1')"
    ]
   },
   {
