Add frequency slices to analysis

--- a/notebooks/WallStudy.ipynb
+++ b/notebooks/WallStudy.ipynb
@@ -37,6 +37,11 @@
     "\n",
     "DURATION_SEC = 38\n",
     "N_TIMES = DURATION_SEC * FS // (N_BUFFER * 2)\n",
+    "D0 = 0.1 # distance between mic and source, in meters\n",
+    "Y_OFFSET = 0.1  \n",
+    "YAW_OFFSET = -120\n",
+    "ROOM_DIM = [10, 8]\n",
+    "print(MIC_POSITIONS)\n",
     "\n",
     "def generate_rir(distance_cm=0, yaw_deg=0, single_mic=False, ax=None):\n",
     "    # simplification1: attenuation normally depends on pressure, humidity, frequency.\n",
@@ -44,16 +49,13 @@
     "    a = 10 # attenuation coefficient in dB / m, between 100-200 degrees, 4000+ Hz\n",
     "    c = 343 # m/s\n",
     "    Ts = 1 / FS\n",
-    "    yaw_offset = -120\n",
-    "    y_offset = 0.1\n",
-    "    offset = [0, y_offset + distance_cm * 1e-2]\n",
-    "    delta = 0.1 # difference between mic and source\n",
+    "    offset = [0, Y_OFFSET + distance_cm * 1e-2]\n",
     "    \n",
     "    if single_mic:\n",
-    "        mic_positions = np.array([offset[0] + delta, offset[1]]).reshape((1, len(offset)))\n",
+    "        mic_positions = np.array([offset[0] + D0, offset[1]]).reshape((1, len(offset)))\n",
     "    else:\n",
     "        mic_positions = np.array(MIC_POSITIONS)\n",
-    "        mic_positions = offset + rotate_mics(mic_positions, yaw_offset - yaw_deg)\n",
+    "        mic_positions = offset + rotate_mics(mic_positions, YAW_OFFSET - yaw_deg)\n",
     "            \n",
     "    source = offset\n",
     "    source_image = [0, -offset[1]]\n",
@@ -90,22 +92,18 @@
    "outputs": [],
    "source": [
     "def generate_room(distance_cm=0, yaw_deg=0, ax=None, single_mic=False, source='mono4125'):\n",
-    "    room_dim = np.array([10, 8])\n",
-    "    yaw_offset = -120\n",
-    "    x_offset = room_dim[0] / 2\n",
-    "    y_offset = 0.1\n",
-    "    delta = 0.1 # difference between mic and source\n",
+    "    x_offset = ROOM_DIM[0] / 2\n",
     "    \n",
     "    m = pra.Material(energy_absorption=\"glass_3mm\")\n",
-    "    room = pra.ShoeBox(fs=FS, p=room_dim, max_order=1, materials=m)\n",
+    "    room = pra.ShoeBox(fs=FS, p=ROOM_DIM, max_order=1, materials=m)\n",
     "\n",
-    "    offset = [x_offset, y_offset + distance_cm * 1e-2]\n",
+    "    offset = [x_offset, Y_OFFSET + distance_cm * 1e-2]\n",
     "    \n",
     "    if single_mic:\n",
-    "        mic_positions = np.array([offset[0] + delta, offset[1]]).reshape((1, len(offset)))\n",
+    "        mic_positions = np.array([offset[0] + D0, offset[1]]).reshape((1, len(offset)))\n",
     "    else:\n",
     "        mic_positions = np.array(MIC_POSITIONS)\n",
-    "        mic_positions = offset + rotate_mics(mic_positions, yaw_offset - yaw_deg)\n",
+    "        mic_positions = offset + rotate_mics(mic_positions, YAW_OFFSET - yaw_deg)\n",
     "        \n",
     "    signal = signals[source]\n",
     "            \n",
@@ -117,7 +115,7 @@
     "    if ax is not None:\n",
     "        for i, mic in enumerate(mic_positions):\n",
     "            ax.scatter(*mic, label=f'mic{i}')\n",
-    "        ax.plot([0, room_dim[0]], [0, 0], label='wall')\n",
+    "        ax.plot([0, ROOM_DIM[0]], [0, 0], label='wall')\n",
     "        ax.axis('equal')\n",
     "        ax.set_xlim(x_offset - 0.5, x_offset + 0.5)\n",
     "        ax.set_ylim(-0.1, 1.0)\n",
@@ -323,7 +321,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "distances = np.linspace(0, 100, 500)\n",
+    "distances = np.linspace(0, 50, 100)\n",
     "frequencies = get_frequencies(FS)\n",
     "\n",
     "df_matrix = np.empty((len(frequencies), len(distances)))\n",
@@ -387,7 +385,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from constants import SPEED_OF_SOUND\n",
+    "\n",
     "frequencies_slices = [671, 3125, 4156, 8000]\n",
+    "\n",
     "max_distance = 50\n",
     "fig, axs = plt.subplots(len(frequencies_slices), sharey=True, sharex=True)\n",
     "fig.suptitle('distance slices')\n",
@@ -398,7 +399,20 @@
     "    axs[i].plot(distances[distances < max_distance], slice_, label=f'{f}Hz')\n",
     "    axs[i].set_xlabel('distance [cm]')\n",
     "    axs[i].set_ylabel('response')\n",
-    "    axs[i].legend(loc='upper right')"
+    "    axs[i].legend(loc='upper right')\n",
+    "    \n",
+    "    \n",
+    "    # peak from constr. interference is expected when the wavelength equals k * distance/2\n",
+    "    # wavelength_constr = c / f_constr = distance / 2\n",
+    "    d_constr = SPEED_OF_SOUND / (2 * f) * 100\n",
+    "    [axs[i].axvline(x=d, color='C1') for d in np.arange(2)*d_constr]\n",
+    "    \n",
+    "    fft = np.fft.rfft(slice_)[1:]\n",
+    "    df = distances[1] - distances[0]\n",
+    "    freq = np.fft.rfftfreq(len(slice_), df)[1:]\n",
+    "    plt.figure()\n",
+    "    plt.plot(1/freq, np.abs(fft))\n",
+    "    plt.axvline(d_constr, color='C1')"
    ]
   },
   {
@@ -408,6 +422,7 @@
    "outputs": [],
    "source": [
     "distance_slices = [5, 10, 20, 30, 40, 50]\n",
+    "\n",
     "max_frequency = 5000\n",
     "min_frequency = 1000\n",
     "freq_indices = np.where((frequencies < max_frequency) & (frequencies > min_frequency))[0]\n",
@@ -418,14 +433,27 @@
     "fig.set_size_inches(10, 10)\n",
     "for i, d in enumerate(distance_slices):\n",
     "    idx = np.argmin(np.abs(distances - d))\n",
-    "    slice_ = df_matrix[freq_indices, idx]\n",
+    "    slice_ = df_matrix[freq_indices, idx]**2\n",
     "    axs[i].plot(frequencies[freq_indices], slice_, label=f'{d}cm')\n",
     "    axs[i].set_xlabel('frequency [Hz]')\n",
     "    axs[i].set_ylabel('response')\n",
     "    axs[i].legend(loc='upper right')\n",
     "    \n",
-    "    slice_ = df_matrix[sparse_indices, idx]\n",
-    "    axs[i].scatter(frequencies[sparse_indices], slice_, label=f'{d}cm', color='C1')"
+    "    slice_ = df_matrix[sparse_indices, idx]**2\n",
+    "    axs[i].scatter(frequencies[sparse_indices], slice_, label=f'{d}cm', color='C1')\n",
+    "    \n",
+    "    # peak from constr. interference is expected when the wavelength equals k * distance/2\n",
+    "    # wavelength_constr = c / f_constr = distance\n",
+    "    d1 = 2 * np.sqrt((d * 1e-2 + Y_OFFSET)**2 + D0**2) # m\n",
+    "    f_constr = SPEED_OF_SOUND / (d1 - D0)  # Hz\n",
+    "    [axs[i].axvline(x=f+1000, color='C1') for f in np.arange(2)*f_constr]\n",
+    "    \n",
+    "    fft = np.fft.rfft(slice_)[1:]\n",
+    "    df = frequencies[sparse_indices[1]] - frequencies[sparse_indices[0]]\n",
+    "    freq = np.fft.rfftfreq(len(slice_), df)[1:]\n",
+    "    plt.figure()\n",
+    "    plt.plot(1/freq, np.abs(fft))\n",
+    "    plt.axvline(f_constr, color='C1')"
    ]
   },
   {
@@ -504,9 +532,9 @@
     "            idx_all += 1\n",
     "            bar.update(idx_all)\n",
     "        \n",
-    "fname = f'results/{exp_name}_simulated.pkl'\n",
-    "pd.to_pickle(df_total, fname)\n",
-    "print('saved as', fname)"
+    "#fname = f'results/{exp_name}_simulated.pkl'\n",
+    "#pd.to_pickle(df_total, fname)\n",
+    "#print('saved as', fname)"
    ]
   },
   {
@@ -541,6 +569,19 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.6.9"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
