--- a/notebooks/WallAnalysis.ipynb
+++ b/notebooks/WallAnalysis.ipynb
@@ -29,7 +29,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 1. Chirp design"
+    "## 1. Chirp design"
    ]
   },
   {
@@ -498,7 +498,7 @@
     "    df_total = pd.read_pickle(fname)\n",
     "    print('read', fname)\n",
     "except:\n",
-    "    print('run wall_analysis.py to parse experiments.')"
+    "    print('Error: run wall_analysis.py to parse experiments.')"
    ]
   },
   {
@@ -544,7 +544,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [],
    "source": [
@@ -602,6 +602,7 @@
     "        for key, val in dict_.items():\n",
     "            this_mask = this_mask & (df_total.loc[:, key] == val)\n",
     "        mask = np.bitwise_or(mask, this_mask)\n",
+    "        assert np.any(mask)\n",
     "    return df_total.loc[mask, :]\n",
     "    \n",
     "if exp_name == \"2020_12_7_moving\":\n",
@@ -616,19 +617,24 @@
     "        {\"source\": \"None\", \"motors\": motors, \"appendix\":\"_new\"},\n",
     "    ]\n",
     "elif exp_name == \"2020_12_9_rotating\":\n",
-    "    source = \"sweep\"\n",
+    "    snr = 0\n",
+    "    appendix = \"\"\n",
     "    chosen_dicts = []\n",
     "    for d in df_total.distance.unique():\n",
-    "        appendix = \"_new\" if d in [20, 30] else \"\" \n",
-    "        for m in [0, \"all43000\"]:\n",
-    "            chosen_dicts += [\n",
-    "                {\"motors\": motors, \"appendix\":appendix, \"snr\":0, \"distance\":d}\n",
-    "            ]\n",
+    "        for deg in df_total.degree.unique():\n",
+    "            if deg == 0:\n",
+    "                motors = [\"all43000\", 0]\n",
+    "            else:\n",
+    "                motors = [0]\n",
+    "                \n",
+    "            for m in motors:\n",
+    "                chosen_dicts += [\n",
+    "                    {\"motors\":m, \"appendix\":appendix, \"snr\":snr, \"distance\":d, \"degree\":deg}\n",
+    "                ]\n",
     "    \n",
-    "print(chosen_dicts)\n",
     "df_chosen = filter_by_dicts(df_total, chosen_dicts)\n",
-    "#assert len(df_chosen) == 2*len(chosen_dicts) # times 2 because of mic_type\n",
-    "print(df_chosen.loc[:, [\"appendix\", \"snr\", \"distance\", \"degree\", \"motors\"]])"
+    "assert len(df_chosen) == 2*len(chosen_dicts), len(df_chosen)# times 2 because of mic_type\n",
+    "df_chosen.tail()"
    ]
   },
   {
@@ -641,28 +647,31 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "mic_type = 'measurement'\n",
-    "for chosen_source, df_source in df_chosen[df_chosen.mic_type==mic_type].groupby('source'):\n",
-    "    \n",
+    "cut_x = 500\n",
+    "cut_y = range(100, 400)\n",
+    "\n",
+    "filters = ['source', 'degree', 'distance']\n",
+    "for chosen_tuple, df_source in df_chosen[df_chosen.mic_type==mic_type].groupby(filters):\n",
     "    fig, axs = plt.subplots(1, 3, squeeze=False)\n",
     "    fig.set_size_inches(15, 5)\n",
-    "    fig.suptitle(chosen_source)\n",
-    "    \n",
+    "    fig.suptitle(dict(zip(filters, chosen_tuple)))\n",
+    "\n",
     "    for j, motors in enumerate([0, \"all43000\"]):\n",
     "        df_this = df_source[df_source.motors==motors]\n",
     "        if len(df_this) != 1:\n",
+    "            print(len(df_this))\n",
     "            continue\n",
-    "            \n",
+    "\n",
     "        row = df_this.iloc[0]\n",
     "        axs[0, j].pcolorfast(row.seconds, row.frequencies, np.log(row.spec.T))\n",
     "        axs[0, j].set_title(f'motors {motors}')\n",
-    "        \n",
-    "    cut_x = 500\n",
-    "    cut_y = range(100, 400)\n",
-    "    \n",
+    "\n",
     "    axs[0, 1].plot([row.seconds[0], row.seconds[cut_x]], [row.frequencies[cut_y[0]], row.frequencies[cut_y[0]]], color='red', linewidth=1)\n",
     "    axs[0, 1].plot([row.seconds[0], row.seconds[0]], [row.frequencies[cut_y[0]], row.frequencies[cut_y[-1]]], color='red', linewidth=1)\n",
     "    axs[0, 1].plot([row.seconds[cut_x], row.seconds[cut_x]], [row.frequencies[cut_y[0]], row.frequencies[cut_y[-1]]], color='red', linewidth=1)\n",
@@ -758,6 +767,8 @@
    },
    "outputs": [],
    "source": [
+    "if exp_name != '2020_12_7_moving':\n",
+    "    raise ValueError('cannot do distance slices on this dataset')\n",
     "#mic_indices = range(4)\n",
     "from constants import SPEED_OF_SOUND\n",
     "CHOSEN_MICS = [0, 1, 2, 3] #[3]\n",
@@ -833,6 +844,71 @@
     "            axs[0, j].set_xlim(0,50)\n",
     "            axs[1, j].set_xlim(1e-1,50)\n",
     "            #axs[0, j].set_ylim(min(spec), max(spec))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## frequency slices"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "if exp_name != '2020_12_9_rotating':\n",
+    "    raise ValueError('cannot do frequency slices')\n",
+    "    \n",
+    "from bin_selection import select_frequencies\n",
+    "from constants import SPEED_OF_SOUND\n",
+    "    \n",
+    "sys.path.append(f'../experiments/{exp_name}/')\n",
+    "from params import MIN_FREQ, MAX_FREQ\n",
+    "    \n",
+    "CHOSEN_MICS = [0, 1, 2, 3] #[3]\n",
+    "\n",
+    "for (distance,mic_type,motors), df_this in df_chosen.groupby(['distance', 'mic_type', 'motors']):\n",
+    "    if mic_type == 'audio_deck':\n",
+    "        mic_indices = CHOSEN_MICS\n",
+    "        bins_ = range(32)\n",
+    "    else:\n",
+    "        mic_indices = [0]\n",
+    "        bins_ = select_frequencies(N_BUFFER, 44100, min_freq=MIN_FREQ, max_freq=MAX_FREQ)\n",
+    "\n",
+    "    fig, axs = plt.subplots(2, len(mic_indices), squeeze=False)\n",
+    "    fig.set_size_inches(15, 5)\n",
+    "    fig.suptitle(f'{distance}cm, {mic_type} mic, motors:{motors}')\n",
+    "\n",
+    "    if len(df_this) != 1: \n",
+    "        print(f\"{len(df_this)} findings for {motors, chosen_source}\")\n",
+    "        continue\n",
+    "\n",
+    "    row = df_this.iloc[0]\n",
+    "    signals_f = row.signals_f # times x n_mics x frequencies\n",
+    "    frequencies = row.frequencies\n",
+    "    \n",
+    "    mean_f = frequencies[bins_[1]] - frequencies[bins_[0]] \n",
+    "    expected_period = SPEED_OF_SOUND / (2 * distance * 1e-2) # m/s / m = Hz\n",
+    "\n",
+    "    for mic_idx in mic_indices:\n",
+    "        spec = np.sum(np.abs(signals_f[:, mic_idx, bins_]), axis=0) # times x frequencies\n",
+    "        axs[0, mic_idx].plot(frequencies[bins_], spec, label=f'mic{mic_idx}', color=f'C{mic_idx}')\n",
+    "        axs[0, mic_idx].set_title(f'm{mic_idx}')\n",
+    "\n",
+    "        spec_fft = np.fft.rfft(spec)[1:]\n",
+    "        freqs = np.fft.rfftfreq(len(spec), mean_f)[1:] # \"seconds\"\n",
+    "        axs[1, mic_idx].plot(1/freqs, np.abs(spec_fft), color=f'C{mic_idx}')\n",
+    "        axs[1, mic_idx].axvline(expected_period, color=f'C{mic_idx}', ls=\":\") # cm\n",
+    "\n",
+    "    #axs[0, mic_idx].legend(loc='upper right')\n",
+    "    #axs[0, mic_idx].set_xlim(0,50)\n",
+    "    #axs[1, mic_idx].set_xlim(1e-1,50)\n",
+    "    #axs[0, j].set_ylim(min(spec), max(spec))"
    ]
   },
   {
@@ -1166,6 +1242,24 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.6.9"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": false,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {
+    "height": "calc(100% - 180px)",
+    "left": "10px",
+    "top": "150px",
+    "width": "282.883px"
+   },
+   "toc_section_display": true,
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
