Add new buzzer effect

--- a/notebooks/WallAnalysis.ipynb
+++ b/notebooks/WallAnalysis.ipynb
@@ -272,10 +272,46 @@
     "fig = plt.figure()\n",
     "fig.set_size_inches(10, 10)\n",
     "plt.title('psd of buzzer frequency sweep')\n",
-    "plt.semilogy(frequencies_chirp[1:], psd[0, 1:], color='C0', label='buzzer')\n",
+    "plt.semilogy(frequencies_chirp, psd[0, :], color='c0', label='buzzer')\n",
     "plt.xlim(frequencies_chirp[1], 16000)\n",
     "plt.grid(which='both')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from scipy import signal as sp\n",
+    "\n",
+    "response = psd[0, :]\n",
+    "peaks = sp.find_peaks(response, height=0.5e-6)[0]\n",
+    "\n",
+    "available_freqs = np.fft.rfftfreq(N_BUFFER, 1/FS)[1:]\n",
+    "allowed_delta = 10\n",
+    "buzzer_freqs = [f for f in frequencies_chirp[peaks] if np.min(np.abs(f) - available_freqs) < allowed_delta]\n",
+    "buzzer_freqs = list(available_freqs[(available_freqs<buzzer_freqs[0]) & (available_freqs >= 1000)]) + buzzer_freqs\n",
+    "print(buzzer_freqs)\n",
+    "print(f'choose {len(buzzer_freqs)} instead of {len(available_freqs)}')\n",
+    "\n",
+    "fig = plt.figure()\n",
+    "fig.set_size_inches(10, 10)\n",
+    "plt.title('psd of buzzer frequency sweep')\n",
+    "plt.plot(frequencies_chirp, response, color='C0', label='buzzer')\n",
+    "[plt.axvline(frequencies_chirp[p], color='C1') for p in peaks]\n",
+    "[plt.axvline(f, color='C2') for f in buzzer_freqs] \n",
+    "plt.xlim(frequencies_chirp[1], 16000)\n",
+    "plt.yscale('log')\n",
+    "plt.grid(which='both')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
